new things added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
                         <img class="img-div-card" src="pic/insta4.png" alt="" srcset="">
                     </div>
         </section> <br><br>
+        <!-- own make part -->
+        <div class="own-part">
+       <div>
+        <h1>About Flowers</h1>
+        <h4>A flower, sometimes known as a bloom or blossom, is the <br> reproductive structure found in flowering plants <br> (plants of the division Angiospermae). Flowers produce gametophytes,<br>
+            which in flowering plants consist of a few haploid cells which <br>produce gametes. The "male" gametophyte, which produces non-motilebr <br> sperm, is enclosed within pollen grains;
+             the "female" gametophyte is contained within the ovule.</h4>
+       </div>
+       <div >
+        <img class="extra-flower" src="pic/picture-1.jpg" alt="" srcset="">
+        <img class="extra-flower" src="pic/picture-2.jpg" alt="" srcset="">
+       </div>
+       </div><br><br><br>
         <!-- Deals section -->
             <section class="from-part">
             <div class="Get-img">
